tests/parser/fail/unterminated-string.som
"test:
failMessage:
  regex: string .+ not terminated
"

UnterminatedString = (
  init = ('i am not terminated!)
)
